--- a/css/main.css
+++ b/css/main.css
@@ -531,7 +531,12 @@ ul {
   .textAbobePills {
     margin-left: 25%;
     top: 10%;
-    font-size: 3em; }
+    font-size: 3em;
+    opacity: 100;
+    transition: none; }
+    .textAbobePills hr {
+      width: 100%;
+      margin-left: 0%; }
 
   .textNext h1 {
     font-size: 1.5em;
@@ -544,13 +549,17 @@ ul {
     height: 90%;
     background-size: 100% auto; }
     .logo .pill {
-      margin-left: 25%;
-      width: auto; }
+      width: auto;
+      background-position: center;
+      background-size: 50%;
+      margin-right: 25%; }
 
   .section1 {
     background-size: auto; }
 
   .title1 {
+    transform: translate(0px, 0px);
+    transition: none;
     top: 0%;
     left: 10%; }
 
@@ -562,7 +571,8 @@ ul {
   .whatItIs {
     top: 10%;
     right: 5%;
-    width: 90%; }
+    width: 90%;
+    opacity: 1; }
     .whatItIs p {
       font-size: 1.2em; }
 
@@ -574,11 +584,14 @@ ul {
     width: 100%; }
 
   .scienceGirlExplains {
+    opacity: 1;
     top: 20%; }
 
   .scienceGirl {
     top: -65%;
-    width: 80%; }
+    width: 80%;
+    opacity: 1;
+    transform: none; }
 
   .manyMeats {
     display: none; }
@@ -586,8 +599,14 @@ ul {
   .vessel {
     background-image: url("../img/vesselTransparent.png"); }
 
+  .scienceGuyExplains {
+    opacity: 1; }
+    .scienceGuyExplains p {
+      font-size: 1.2em; }
+
   .scienceGuyExplains2 {
     transform: translate(0px, 0px);
+    opacity: 1;
     top: 0%;
     width: 140%;
     left: -40%;
@@ -604,6 +623,7 @@ ul {
     background-position: none; }
 
   .pill2 {
+    display: none;
     background-position: 100% center;
     background-size: 30% auto; }
 
@@ -620,14 +640,18 @@ ul {
     background-image: url("../img/backBrickMini.jpg");
     background-size: 100% 100%; }
 
+  .textViewport {
+    opacity: 1; }
+
   .title6 {
-    margin-left: -28%;
+    margin-left: 0%;
     width: 100%;
     padding-top: 1%; }
     .title6 h2 {
       font-size: 3em; }
 
   .text6 {
+    opacity: 1;
     margin-left: 5%;
     width: 70%;
     padding-top: 10%; }
@@ -636,15 +660,20 @@ ul {
     background-position: right center; }
 
   .logo2 {
-    background-size: 100% auto; }
+    background-size: 100% auto;
+    background-image: url("../img/logo3.png"); }
 
   .finalText1 {
-    width: 75%; }
+    opacity: 1;
+    width: 75%;
+    transform: translate(0px, 0px); }
     .finalText1 p {
       font-size: 1.2em; }
 
   .finalText2 {
-    bottom: 2%; }
+    opacity: 1;
+    bottom: 2%;
+    transform: translate(0px, 0px); }
     .finalText2 h1 {
       font-size: 1.2em; }
     .finalText2 p {
