--- a/index.jade
+++ b/index.jade
@@ -65,7 +65,7 @@ html.no-js(lang='')
       //.pillsAndMeat
       .logo
         .pill
-      .textNext(style=' top: 80vh;left: 40vw').textViewport
+      .textNext.textViewport
         h1 Scroll to know more
           br
           a(data-scroll,href="#section1")
@@ -78,7 +78,7 @@ html.no-js(lang='')
       .whatItIs.bubble
         p The polybiome project is an initiative to reduce the cancerigenous potential of meat using microorganisms commonly found inside our body. It consists on a probiotic with 8 different organisms designed to transform harmful components of meat into harmless byproducts that will be naturally discarded by the body. 
           span But, how does it work?
-      .textNext(style=' top: 180vh;left: 45vw')
+      .textNext.next1
         h1 Find out!
           br
           a(data-scroll,href="#section2")
@@ -94,7 +94,7 @@ html.no-js(lang='')
             span polyamines
             |, that we digest and absorbe at the intestinal tract. Polyamines are involved in cell proliferation and are normally found in small quantities in our body. However, it has been shown that a disbalance in the amount of polyamines is a factor of risk for cancer.
       .scienceGirl
-      .textNext(style=' top: 280vh;left: 47vw')
+      .textNext.next2
               h1 Next
                 br
                 a(data-scroll,href="#section3")
@@ -133,7 +133,7 @@ html.no-js(lang='')
                       img(src="img/meat6.png").img-responsive
                     .col-md-4
                       img(src="img/meat5.png").img-responsive
-      .textNext(style=' top: 80vh;left: 47vw')
+      .textNext.next3
         h1 Next
           br
           a(data-scroll,href="#section4")
@@ -149,7 +149,7 @@ html.no-js(lang='')
               |them?
           p
           | Once digested, the polyamines enter the blod floow and spread across the body, making them difficult to target. Therefore, it is nescesary an approach that eliminates this molecules before they are absorbed. 
-      .textNext(style=' top: 480vh;left: 47vw')
+      .textNext.next4
         h1 Next
           br
           a(data-scroll,href="#section5")
@@ -166,7 +166,7 @@ html.no-js(lang='')
           p
           | The microrganisms in Polybiome degrade the poliamines in the intestinal tract, reducing the external intake and reducing the risk factor of cancer. 
       .pill2
-      .textNext(style=' top: 580vh;left: 47vw;color: white')
+      .textNext.next5
         h1 Next
           br
           a(data-scroll,href="#section6")
@@ -179,7 +179,7 @@ html.no-js(lang='')
             span iGEM!
       .text6
         p iGEM is an international synthetic biology competition hold in Boston. We'll be representing university Pompeu Fabra and exposing the Polybiome project. 
-      .textNext(style=' top: 680vh;left: 47vw')
+      .textNext.next6
         h1 Last
           br
           a(data-scroll,href="#secFinal")
