--- a/css/main.sass
+++ b/css/main.sass
@@ -60,7 +60,28 @@ body
 		size: cover
 		position: right
 		repeat: no-repeat
-
+.textViewport
+	top: 80vh
+	left: 40vw
+.next1
+	top: 180vh
+	left: 45vw
+.next2
+	top: 280vh
+	left: 47vw
+.next3
+	top: 80vh
+	left: 47vw
+.next4
+	top: 480vh
+	left: 47vw
+.next5
+	top: 580vh
+	left: 47vw
+	color: white
+.next6
+	top: 680vh
+	left: 47vw
 .logo
 	height: 110%
 	width: 50%
@@ -556,6 +577,11 @@ ul
 		margin-left: 25%
 		top: 10%
 		font-size: 3em
+		opacity: 100
+		transition: none
+		hr
+			width: 100%
+			margin-left: 0%
 	.textNext
 		h1
 			font-size: 1.5em
@@ -567,17 +593,34 @@ ul
 		height: 90%
 		background-size: 100% auto
 		.pill
-			margin-left: 25%
+			width: auto
+			background:
+				position: center
+				size: 50%
+			margin-right: 25%
 	.section1
 		background-size: auto
 	.title1
+		transform: translate(0px, 0px)
+		transition: none
 		top: 0%
 		left: 10%
-		width: 100%
+		//width: 100%
+	.title3
+		margin-left: 0%
+		transform: translate(0px, 0px)
+		transition: none
+	.title5
+		margin-left: 0%
+		transform: translate(0px, 0px)
+		transition: none
 	.whatItIs
-		top: 20%
+		top: 10%
 		right: 5%
 		width: 90%
+		opacity: 1
+		p
+			font-size: 1.2em
 	.blackBoard
 		background-image: url("../img/blackBoardStrech.png")
 		margin-left: 2%
@@ -585,32 +628,44 @@ ul
 		background-size: 170% 90%
 		width: 100%
 	.scienceGirlExplains
+		opacity: 1
 		top: 20%
 	.scienceGirl
 		top: -65%
 		width: 80%
+		opacity: 1
+		transform: none
 	.manyMeats
 		display: none
 	.vessel
 		background-image: url("../img/vesselTransparent.png")
+
+	.scienceGuyExplains
+		opacity : 1
+		p
+			font-size: 1.2em
+
 	.scienceGuyExplains2
+		font-size: 1.7em
+		transform: translate(0px, 0px)
+		opacity : 1
 		top: 0%
 		width: 140%
 		left: -40%
 		float: none
-		p
-			font-size: 1.5em
-			color: black
+		transition: none
 	.scienceGuy
 		background-size: 50% auto
 	.section5
 		background-position: none
 	.pill2
+		display: none
 		background-position: 100% center
 		background-size: 30% auto
 	.title5
 		margin-left: 10%
 	.scienceGuyExplains3
+		opacity: 1
 		top: 30%
 		width: 50%
 		left: -40%
@@ -618,30 +673,61 @@ ul
 	.section6
 		background-image: url("../img/backBrickMini.jpg")
 		background-size: 100% 100%
+	.textViewport
+		opacity: 1
+
+
 	.title6
-		margin-left: -28%
+		margin-left: 0%
 		width: 100%
 		padding-top: 1%
 		h2
 			font-size: 3em
 	.text6
+		opacity : 1
 		margin-left: 5%
 		width: 70%
 		padding-top: 10%
+		p
+			font-size: 1.2em
 	.secFinal
 		background-position: right center
 	.logo2
 		background-size: 100% auto
+		background-image: url("../img/blueLogo.png")
 	.finalText1
+		opacity : 1
 		width: 75%
+		transform: translate(0px,0px)
 		p
 			font-size: 1.2em
 	.finalText2
+		opacity : 1
 		bottom: 2%
+		transform: translate(0px,0px)
 		h1
 			font-size: 1.2em
 		p
 			font-size: 1em
+	.next1
+		top: 190vh
+		left: 45vw
+	.next2
+		top: 290vh
+		left: 47vw
+	.next3
+		top: 90vh
+		left: 47vw
+	.next4
+		top: 490vh
+		left: 47vw
+	.next5
+		top: 590vh
+		left: 47vw
+		color: white
+	.next6
+		top: 690vh
+		left: 47vw
 @media (min-width: 768px)
 
 @media (max-width: 992px)
@@ -652,3 +738,46 @@ ul
 		margin-right: -10px
 
 @media (min-width: 1200px)
+
+@media only screen and (max-device-width: 1000px) and (orientation: landscape)
+	.mainViewport
+		height: 200vh
+	.section1
+		height: 200vh
+	.section2
+		height: 200vh
+	.section3
+		height: 200vh	
+	.section4
+		height: 200vh
+	.section5
+		height: 200vh
+	.section6
+		height: 200vh
+	.scienceGirlExplains
+		p
+			font-size: 1.5em
+	.textNext
+		display: none
+	// .textViewport
+	// 	top: 180vh
+	// 	left: 40vw		
+	// .next1
+	// 	top: 380vh
+	// 	left: 45vw
+	// .next2
+	// 	top: 580vh
+	// 	left: 47vw
+	// .next3
+	// 	top: 180vh
+	// 	left: 47vw
+	// .next4
+	// 	top: 780vh
+	// 	left: 47vw
+	// .next5
+	// 	top: 980vh
+	// 	left: 47vw
+	// 	color: white
+	// .next6
+	// 	top: 1080vh
+	// 	left: 47vw
