--- a/css/main.css
+++ b/css/main.css
@@ -248,7 +248,7 @@ ul {
   height: 100%;
   width: 50%;
   margin-left: 2%;
-  background-image: url("../img/blackBoard.png");
+  background-image: url("../img/blackboard.png");
   background-size: contain;
   background-position: left;
   background-repeat: no-repeat; }
