--- a/css/main.sass
+++ b/css/main.sass
@@ -251,7 +251,7 @@ ul
 	width: 50%
 	margin-left: 2%
 	background:
-		image: url('../img/blackBoard.png')
+		image: url('../img/blackboard.png')
 		size: contain
 		position: left
 		repeat: no-repeat
@@ -583,14 +583,14 @@ ul
 			width: 100%
 			margin-left: 0%
 	.textNext
+		display: none
 		h1
 			font-size: 1.5em
 			margin-left: -50%
 	.logo
-		top: 10%
 		margin-left: 0%
 		width: 100%
-		height: 90%
+		height: 110%
 		background-size: 100% auto
 		.pill
 			width: auto
@@ -615,21 +615,21 @@ ul
 		transform: translate(0px, 0px)
 		transition: none
 	.whatItIs
-		top: 10%
+		top: 5%
 		right: 5%
 		width: 90%
 		opacity: 1
 		p
-			font-size: 1.2em
+			font-size: 1em
 	.blackBoard
-		background-image: url("../img/blackBoardStrech.png")
+		background-image: url("../img/blackboardStrech.png")
 		margin-left: 2%
 		background-position: left
-		background-size: 170% 90%
+		background-size: 170% 80%
 		width: 100%
 	.scienceGirlExplains
 		opacity: 1
-		top: 20%
+		top: 25%
 	.scienceGirl
 		top: -65%
 		width: 80%
@@ -652,8 +652,11 @@ ul
 		top: 0%
 		width: 140%
 		left: -40%
+		height: 100%
 		float: none
 		transition: none
+		background-color: rgba(255,255,255,0.2)
+
 	.scienceGuy
 		background-size: 50% auto
 	.section5
@@ -666,10 +669,10 @@ ul
 		margin-left: 10%
 	.scienceGuyExplains3
 		opacity: 1
-		top: 30%
-		width: 50%
-		left: -40%
-		font-size: 1.2em
+		top: -55%
+		width: 90%
+		left: -5%
+		font-size: 1em
 	.section6
 		background-image: url("../img/backBrickMini.jpg")
 		background-size: 100% 100%
@@ -684,12 +687,14 @@ ul
 		h2
 			font-size: 3em
 	.text6
+
 		opacity : 1
 		margin-left: 5%
 		width: 70%
 		padding-top: 10%
 		p
 			font-size: 1.2em
+			background-color: rgba(255,255,255,0.5)
 	.secFinal
 		background-position: right center
 	.logo2
