--- a/css/main.css
+++ b/css/main.css
@@ -567,15 +567,16 @@ ul {
       width: 100%;
       margin-left: 0%; }
 
-  .textNext h1 {
-    font-size: 1.5em;
-    margin-left: -50%; }
+  .textNext {
+    display: none; }
+    .textNext h1 {
+      font-size: 1.5em;
+      margin-left: -50%; }
 
   .logo {
-    top: 10%;
     margin-left: 0%;
     width: 100%;
-    height: 90%;
+    height: 110%;
     background-size: 100% auto; }
     .logo .pill {
       width: auto;
@@ -603,23 +604,23 @@ ul {
     transition: none; }
 
   .whatItIs {
-    top: 10%;
+    top: 5%;
     right: 5%;
     width: 90%;
     opacity: 1; }
     .whatItIs p {
-      font-size: 1.2em; }
+      font-size: 1em; }
 
   .blackBoard {
-    background-image: url("../img/blackBoardStrech.png");
+    background-image: url("../img/blackboardStrech.png");
     margin-left: 2%;
     background-position: left;
-    background-size: 170% 90%;
+    background-size: 170% 80%;
     width: 100%; }
 
   .scienceGirlExplains {
     opacity: 1;
-    top: 20%; }
+    top: 25%; }
 
   .scienceGirl {
     top: -65%;
@@ -645,8 +646,10 @@ ul {
     top: 0%;
     width: 140%;
     left: -40%;
+    height: 100%;
     float: none;
-    transition: none; }
+    transition: none;
+    background-color: rgba(255, 255, 255, 0.2); }
 
   .scienceGuy {
     background-size: 50% auto; }
@@ -664,10 +667,10 @@ ul {
 
   .scienceGuyExplains3 {
     opacity: 1;
-    top: 30%;
-    width: 50%;
-    left: -40%;
-    font-size: 1.2em; }
+    top: -55%;
+    width: 90%;
+    left: -5%;
+    font-size: 1em; }
 
   .section6 {
     background-image: url("../img/backBrickMini.jpg");
@@ -689,7 +692,8 @@ ul {
     width: 70%;
     padding-top: 10%; }
     .text6 p {
-      font-size: 1.2em; }
+      font-size: 1.2em;
+      background-color: rgba(255, 255, 255, 0.5); }
 
   .secFinal {
     background-position: right center; }
