--- a/css/main.sass
+++ b/css/main.sass
@@ -1,11 +1,22 @@
+@import compass
+
 .body
 	padding-top: 0px
+
 .tempDiv
-	height: 5000px
+	height: 2000px
 
+.navbar
+	margin-bottom: 0px
+	background-color: #ff9d64 // Old browsers
+	@include filter-gradient(#ff9d64, #b26234, horizontal) // IE6-9
+	@include background-image(linear-gradient(left,  #ff9d64 0%,#ffad7e 47%,#b26234 100%))
 
-
-
+.main
+	height: 500px
+	background-color: #ff9d64 // Old browsers
+	@include filter-gradient(#ff9d64, #b26234, horizontal) // IE6-9
+	@include background-image(linear-gradient(left,  #ff9d64 0%,#ffad7e 47%,#b26234 100%))
 
 
 
