--- a/index.jade
+++ b/index.jade
@@ -61,6 +61,7 @@ html.no-js(lang='')
                 li.divider(role='separator')
                 li
                   a(href='#') Support us!
+    .main
     .tempDiv
     script(script src="js/vendor/jquery-1.12.0.min.js")
     script(src='js/vendor/bootstrap.min.js')
