--- a/css/main.sass
+++ b/css/main.sass
@@ -6,17 +6,44 @@
 .tempDiv
 	height: 2000px
 
-.navbar
+.navbar-default
+	//box-shadow: none
+	border: none
+	border-radius: 0px
+	shadow: none
 	margin-bottom: 0px
-	background-color: #ff9d64 // Old browsers
-	@include filter-gradient(#ff9d64, #b26234, horizontal) // IE6-9
-	@include background-image(linear-gradient(left,  #ff9d64 0%,#ffad7e 47%,#b26234 100%))
+	background: none
+	// background-color: #5548b2
+	// @include filter-gradient(#5548b2, #7764ff, horizontal)
+	// @include background-image(linear-gradient(left, #5548b2 0%,#7764ff 100%))
+	.navbar-toggle	
+		.icon-bar
+			background-color: rgb(255,255,255)
+			margin-top: 5px
+			height: 4px
+
+	button
+		border: none
+
+	.navbar-brand
+		height: 100px
+		padding:
+			bottom: 0px
+		padding-left: 25%
+		img
+			height: 100%
+			width: auto
 
 .main
-	height: 500px
-	background-color: #ff9d64 // Old browsers
-	@include filter-gradient(#ff9d64, #b26234, horizontal) // IE6-9
-	@include background-image(linear-gradient(left,  #ff9d64 0%,#ffad7e 47%,#b26234 100%))
+	height: 100vh
+	background:
+		image: url('../img/prbbhall.jpg')
+		size: cover
+		position: center
+		repeat: no-repeat
+	// background-color: #5548b2
+	// @include filter-gradient(#5548b2, #7764ff, horizontal)
+	// @include background-image(linear-gradient(left, #5548b2 0%,#7764ff 100%))
 
 
 
