--- a/index.jade
+++ b/index.jade
@@ -28,40 +28,42 @@ html.no-js(lang='')
         |  browser. Please 
         a(href='http://browsehappy.com/') upgrade your browser
         |  to improve your experience.
-    nav.navbar.navbar-default
-      .container-fluid
-        // Brand and toggle get grouped for better mobile display
-        .navbar-header
-          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href='#') Brand
-        // Collect the nav links, forms, and other content for toggling
-        .navbar-collapse#bs-example-navbar-collapse-1.collapse
-          ul.nav.navbar-nav.navbar-right
-            li.active
-              a(href='#')
-                | Home 
-                span.sr-only (current)
-            li
-              a(href='#') Faq
-            li
-              a(href='#') Igem Page
-            li.dropdown
-              a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
-                | Get in contact! 
-                span.caret
-              ul.dropdown-menu
-                li
-                  a(href='#') Our blog
-                li
-                  a(href='#') The team
-                li.divider(role='separator')
-                li
-                  a(href='#') Support us!
     .main
+      nav.navbar.navbar-default
+        .container-fluid
+          // Brand and toggle get grouped for better mobile display
+          .navbar-header
+            button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
+              span.sr-only Toggle navigation
+              span.icon-bar
+              span.icon-bar
+              span.icon-bar
+            a.navbar-brand(href='#')
+              img(src='img/logoMain.png')
+          // Collect the nav links, forms, and other content for toggling
+          .navbar-collapse#bs-example-navbar-collapse-1.collapse
+            ul.nav.navbar-nav.navbar-right
+              li.active
+                a(href='#')
+                  | Home 
+                  span.sr-only (current)
+              li
+                a(href='#') Faq
+              li
+                a(href='#') Igem Page
+              li.dropdown
+                a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
+                  | Get in contact! 
+                  span.caret
+                ul.dropdown-menu
+                  li
+                    a(href='#') Our blog
+                  li
+                    a(href='#') The team
+                  li.divider(role='separator')
+                  li
+                    a(href='#') Support us!
+    
     .tempDiv
     script(script src="js/vendor/jquery-1.12.0.min.js")
     script(src='js/vendor/bootstrap.min.js')
