--- a/css/main.sass
+++ b/css/main.sass
@@ -12,10 +12,9 @@
 	border-radius: 0px
 	shadow: none
 	margin-bottom: 0px
-	background: none
-	// background-color: #5548b2
-	// @include filter-gradient(#5548b2, #7764ff, horizontal)
-	// @include background-image(linear-gradient(left, #5548b2 0%,#7764ff 100%))
+	background-color: #5548b2
+	@include filter-gradient(#5548b2, #7764ff, horizontal)
+	@include background-image(linear-gradient(left, #5548b2 0%,#7764ff 100%))
 	.navbar-toggle	
 		.icon-bar
 			background-color: rgb(255,255,255)
@@ -36,14 +35,14 @@
 
 .main
 	height: 100vh
-	background:
-		image: url('../img/prbbhall.jpg')
-		size: cover
-		position: center
-		repeat: no-repeat
+	// background:
+	// 	image: url('../img/prbbhall.jpg')
+	// 	size: cover
+	// 	position: center
+	// 	repeat: no-repeat
 	// background-color: #5548b2
-	// @include filter-gradient(#5548b2, #7764ff, horizontal)
-	// @include background-image(linear-gradient(left, #5548b2 0%,#7764ff 100%))
+	@include filter-gradient(#5548b2, #7764ff, horizontal)
+	@include background-image(linear-gradient(left, #5548b2 0%,#7764ff 100%))
 
 
 
