--- a/css/main.sass
+++ b/css/main.sass
@@ -10,12 +10,11 @@
 	//box-shadow: none
 	border: none
 	border-radius: 0px
-	shadow: none
+	//shadow: none
 	margin-bottom: 0px
-	background-color: #5548b2
-	@include filter-gradient(#5548b2, #7764ff, horizontal)
-	@include background-image(linear-gradient(left, #5548b2 0%,#7764ff 100%))
-	.navbar-toggle	
+	background-image: none
+	background-color: #f4b500
+	.navbar-toggle
 		.icon-bar
 			background-color: rgb(255,255,255)
 			margin-top: 5px
@@ -27,27 +26,33 @@
 	.navbar-brand
 		height: 100px
 		padding:
-			bottom: 0px
-		padding-left: 25%
+			bottom: 10px
+		padding-left: 30%
 		img
-			height: 100%
+			height: 95%
 			width: auto
 
 .main
-	height: 100vh
-	// background:
-	// 	image: url('../img/prbbhall.jpg')
-	// 	size: cover
-	// 	position: center
-	// 	repeat: no-repeat
-	// background-color: #5548b2
-	@include filter-gradient(#5548b2, #7764ff, horizontal)
-	@include background-image(linear-gradient(left, #5548b2 0%,#7764ff 100%))
+	// height: 100vh
+	background:
+		image: url('../img/pillGlass.jpg')
+		size: cover
+		position: top
+		repeat: no-repeat
+		attachment: fixed
+
+.mainText
+	height: 400px
+	text-align: center
+	h1
+	p
 
 
 
 
-
+.mainBox
+	height: 80px
+	background-color: #f4b500
 
 
 
