--- a/css/main.sass
+++ b/css/main.sass
@@ -13,7 +13,8 @@
 	//shadow: none
 	margin-bottom: 0px
 	background-image: none
-	background-color: #f4b500
+	background-color: rgba(255,255,255,0)
+
 	.navbar-toggle
 		.icon-bar
 			background-color: rgb(255,255,255)
@@ -35,14 +36,14 @@
 .main
 	// height: 100vh
 	background:
-		image: url('../img/pillGlass.jpg')
+		image: url('../img/icoBack.jpg')
 		size: cover
 		position: top
 		repeat: no-repeat
 		attachment: fixed
 
 .mainText
-	height: 400px
+	min-height: 400px
 	text-align: center
 	h1
 	p
@@ -52,7 +53,7 @@
 
 .mainBox
 	height: 80px
-	background-color: #f4b500
+
 
 
 
