--- a/css/main.css
+++ b/css/main.css
@@ -14,47 +14,46 @@
   border-radius: 0px;
   margin-bottom: 0px;
   background-image: none;
-  background-color: #f4b500;
+  background-color: rgba(255, 255, 255, 0);
 }
-/* line 18, main.sass */
+/* line 19, main.sass */
 .navbar-default .navbar-toggle .icon-bar {
   background-color: white;
   margin-top: 5px;
   height: 4px;
 }
-/* line 23, main.sass */
+/* line 24, main.sass */
 .navbar-default button {
   border: none;
 }
-/* line 26, main.sass */
+/* line 27, main.sass */
 .navbar-default .navbar-brand {
   height: 100px;
   padding-bottom: 10px;
   padding-left: 30%;
 }
-/* line 31, main.sass */
+/* line 32, main.sass */
 .navbar-default .navbar-brand img {
   height: 95%;
   width: auto;
 }
 
-/* line 35, main.sass */
+/* line 36, main.sass */
 .main {
-  background-image: url("../img/pillGlass.jpg");
+  background-image: url("../img/icoBack.jpg");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
-/* line 44, main.sass */
+/* line 45, main.sass */
 .mainText {
-  height: 400px;
+  min-height: 400px;
   text-align: center;
 }
 
-/* line 53, main.sass */
+/* line 54, main.sass */
 .mainBox {
   height: 80px;
-  background-color: #f4b500;
 }
