--- a/index.jade
+++ b/index.jade
@@ -39,7 +39,7 @@ html.no-js(lang='')
               span.icon-bar
               span.icon-bar
             a.navbar-brand(href='#')
-              img(src='img/bluePill.png')
+              img(src='img/icoMinimal.png')
           // Collect the nav links, forms, and other content for toggling
           .navbar-collapse#bs-example-navbar-collapse-1.collapse
             ul.nav.navbar-nav.navbar-right
