--- a/index.jade
+++ b/index.jade
@@ -39,7 +39,7 @@ html.no-js(lang='')
               span.icon-bar
               span.icon-bar
             a.navbar-brand(href='#')
-              img(src='img/icoMinimal.png')
+              img(src='img/icoMinimal.png').img-responsive
           // Collect the nav links, forms, and other content for toggling
           .navbar-collapse#bs-example-navbar-collapse-1.collapse
             ul.nav.navbar-nav.navbar-right
@@ -64,9 +64,10 @@ html.no-js(lang='')
                   li
                     a(href='#') Support us!
       .mainText
-        h1 Lorem ipsum Minim culpa nostrud sit officia Duis.
+        h1 Lorem 
+          span ipsum 
+          |minim culpa nostrud.
         p Lorem ipsum Mollit adipisicing cupidatat cupidatat eiusmod laborum aliqua anim quis Excepteur sit est cupidatat ea elit nisi mollit reprehenderit fugiat.
-      .mainBox
     .tempDiv
     script(script src="js/vendor/jquery-1.12.0.min.js")
     script(src='js/vendor/bootstrap.min.js')
