--- a/css/main.sass
+++ b/css/main.sass
@@ -56,7 +56,7 @@
 	background-image: url('../img/backIco.png'), linear-gradient(left,#0078AA, #009EAA) /* W3C */
 
 	background:
-		size: 150px auto, auto auto
+		size: 150px auto, 100% 100%
 		position: bottom 10% left 5%, center center
 		repeat: no-repeat
 
