--- a/css/main.sass
+++ b/css/main.sass
@@ -54,11 +54,10 @@
 	background: #eb01a5,linear-gradient(left,#0078AA, #009EAA) 
 	background-image: url('../img/backIco.png') /* fallback */
 	background-image: url('../img/backIco.png'), linear-gradient(left,#0078AA, #009EAA) /* W3C */
-
-	background:
-		size: 150px auto, 100% 100%
-		position: bottom 10% left 5%, center center
-		repeat: no-repeat
+	// background:
+	// 	size: 150px auto, 100% 100%
+	// 	position: bottom 10% left 5%, center center
+	// 	repeat: no-repeat
 
 
 .mainText
