--- a/css/main.sass
+++ b/css/main.sass
@@ -34,7 +34,7 @@
 	.navbar-brand
 		position: absolute
 		left: 50%
-		margin-left: -105px !important  /* 50% of your logo width */
+		margin-left: -115px !important  /* 50% of your logo width */
 		display: block
 		height: 150px
 		padding:
@@ -60,17 +60,18 @@
 	background-image: url('../img/backIco.png'), -o-linear-gradient(left, #0078AA, #009EAA) // Opera 11.10
 	background:
 		size: 250px auto, 100% 100%
-		position: bottom -35px left -25px, center center
+		position: bottom -35px left -35px, center center
 		repeat: no-repeat
 
 
 .mainText
 	margin-left: 5%
 	margin-right: 5%
+	margin-top: 10%
 	min-height: 250px
 	text-align: center
 	h1
-		font-size: 2em
+		font-size: 2.5em
 		color: white
 		font-family: Netto Offc
 		span
@@ -79,10 +80,40 @@
 		color: white
 
 
+#sec1
+	#textSec1
+		margin-top: 10%
+		margin-left: 5%
+		margin-right: 5%
+		text-align: center
+		h2
+			font-size: 1.8em
+			font-family: Netto Offc
+			font-weight: bold
+			color: #0078AA
+			span
+				color: #7AC943
+
+		p
+			text-align: center
+			line-height: 200%
+			color: #7f7f7f
+	#imgSec1
+		margin-left: 10%
+		margin-right: 10%
+		margin-top: 10%
+		position: relative
+		#ribbon
+			position: absolute
+			max-width: 30%
+			height: auto
+			left: 38%
+			transform: translate(0px, -30px)
+			transition: transform 0.5s ease-in
 
 
-
-
+		#omsMeat
+			position: absolute
 
 
 
