--- a/index.jade
+++ b/index.jade
@@ -64,11 +64,21 @@ html.no-js(lang='')
                   li
                     a(href='#') Support us!
       .mainText
-        h1 Lorem 
-          span ipsum 
-          |minim culpa nostrud.
-        p Lorem ipsum Mollit adipisicing cupidatat cupidatat eiusmod laborum aliqua anim quis Excepteur sit est cupidatat ea elit nisi mollit reprehenderit fugiat.
-    .tempDiv
+        p PolyBiome is an initiative to reduce the cancerigenous potential of red and processed meats using safe microorganisms.
+        h1 DISCOVER THE 
+          span REVOLUTION 
+    #sec1
+      #textSec1
+        h2
+          span One 
+          |in every 33 
+          span cancers 
+          |is adscribed to processed or red meat. 
+        p Acording to the World Health Organitzation Lorem ipsum Mollit incididunt nostrud consectetur sit aute dolore proident in est culpa consectetur officia enim veniam minim laborum in sint minim Excepteur eu in ullamco minim sed ex culpa consequat ad nulla in pariatur veniam quis laborum amet Ut in do dolore in culpa dolor.
+      #imgSec1
+        img(src='img/ribbon.png').img-responsive#ribbon
+        img(src='img/omsMeat.png').img-responsive#omsMeat
+      .tempDiv
     script(script src="js/vendor/jquery-1.12.0.min.js")
     script(src='js/vendor/bootstrap.min.js')
     script(src="js/smooth-scroll.js")
