--- a/css/main.sass
+++ b/css/main.sass
@@ -34,7 +34,7 @@
 	.navbar-brand
 		position: absolute
 		left: 50%
-		margin-left: -115px !important  /* 50% of your logo width */
+		margin-left: -115px /* 50% of your logo width */
 		display: block
 		height: 150px
 		padding:
@@ -78,6 +78,7 @@
 			color: #7AC943
 	p
 		color: white
+		font-size: 1em
 
 
 #sec1
@@ -117,5 +118,53 @@
 
 
 
+@media screen and (min-width: 768px)
+	.navbar-default
+		background-color: transparent
+		height: 100px
+		border-bottom: none
+		outline: none
+		.navbar-nav>li>a
+			color: white
+		.navbar-nav>.active>a
+			background-image: none
+			background-color: rgba(255,255,255,0.8)
+		.navbar-collapse
+			margin-top: 0px
+			background-color: transparent
+		.navbar-brand
+			left: auto
+			height: 100px
+			margin-left: 0px
+			padding-left: 5%
+	.main
+		background-size: 400px auto, 100% 100%
+		background-position: bottom -80px left -35px, center center
+		min-height: 50vh
+	.mainText
+		margin-top: 7%
+		p
+			font-size: 1.3em
+		h1
+			font-size: 3em
+			padding-top: 20px
+	#sec1
+		#imgSec1
+			margin-left: 25%
+			margin-right: 25%
 
 
+
+@media screen and (min-width: 1280px)
+
+	.mainText
+		margin-top: 10%
+		p
+			font-size: 2em
+		h1
+			font-size: 3.5em
+			padding-top: 50px
+	.main
+		background-size: 700px auto, 100% 100%
+		background-position: bottom -100px left -35px, center center
+		min-height: 100vh
