--- a/index.jade
+++ b/index.jade
@@ -48,9 +48,10 @@ html.no-js(lang='')
                   | Home 
                   span.sr-only (current)
               li
-                a(href='#') Faq
+                a(href='#') The Team
               li
                 a(href='#') Igem Page
+
               li.dropdown
                 a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
                   | Get in contact! 
@@ -90,15 +91,19 @@ html.no-js(lang='')
         img(src='img/bacon.png').food
         img(src='img/lamb.png',style="max-width: 40%; margin-left:20px").food
     hr
-    #sec2
+    #sec2.noOverflow
       .textSec
         h2
           span Polyamines 
           | are the main responsibles of the meat cancerigenous potential.
-        p These small molecules are involved in processes such as cell proliferation, and are, in small quantities, essential for our bodies. However, if there is a desequilibrium in their quantity, for example, due to coninious meat intake, polyamines can upregulate proliferation, increasing cancer risk and becoming perjudicial for our health.
-      .imgSec.noOverflow
+        p These small molecules are involved in processes such as cell proliferation, and are, in small quantities, essential for our bodies. However, if there is a desequilibrium in their concentration, for example, due to coninious meat intake, polyamines can upregulate proliferation, increasing cancer risk and becoming perjudicial for our health.
+      .imgSec
         img(src='img/mol1.png').img-responsive#mol1
         img(src='img/mol2.png').img-responsive#mol2
+       .textSec
+        p Lorem ipsum Quis irure eu ut veniam ut exercitation anim sunt ea ex amet reprehenderit labore mollit irure officia tempor incididunt anim aliquip consectetur irure eu aute Excepteur in consectetur do ut aute ea nulla Duis ut consectetur pariatur nulla laboris culpa adipisicing consectetur adipisicing consectetur in Duis proident mollit cillum ut irure dolor reprehenderit veniam sit dolore voluptate dolor aliquip esse ea dolore culpa mollit voluptate deserunt adipisicing anim non elit sit anim eiusmod est deserunt sit elit irure enim esse nostrud Duis occaecat velit est eiusmod officia est veniam elit esse magna.
+      .imgSec
+        img(src='img/vessel.gif').img-responsive#veins
     .tempDiv
     script(script src="js/vendor/jquery-1.12.0.min.js")
     script(src='js/vendor/bootstrap.min.js')
