--- a/css/main.sass
+++ b/css/main.sass
@@ -162,7 +162,7 @@ img.food
 			&.first
 				border-top-left-radius: 20px
 			&:hover
-				box-shadow: inset 0 3px 9px rgba(0,0,0,0.5)
+				box-shadow: inset 0 3px 9px rgba(0,0,0,0.2)
 				color: white
 			&:active
 				background-color: rgba(255,255,255,1)
@@ -171,7 +171,7 @@ img.food
 		.navbar-nav>.active>a
 			background-image: none
 			background-color: rgba(255,255,255,0)
-			box-shadow: inset 0 3px 9px rgba(0,0,0,0.5)
+			box-shadow: inset 0 3px 9px rgba(0,0,0,0.2)
 			color: white
 			&:hover
 				background-color: rgba(255,255,255,1)
@@ -266,7 +266,7 @@ img.food
 	.main
 		background-size: 700px auto, 100% 100%
 		background-position: bottom -100px left -35px, center center
-		min-height: 80vh
+		min-height: 650px
 
 	#sec1,#sec2
 		.textSec
